minor fix to support SM cards 16MB and below

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* libmpio/src/io.c (model2externalmem): added FY100 and VP-01 to
 	  the list, the external memory of these is now supported.
 	  (Thanks to John for providing the information!)
+	* libmpio/src/mpio.c (mpio_init_external): 
+	  minor change to possibly support card 16MB and below
 
 2003-09-22  Markus Germeier  <mager@tzi.de>
 	* added Johns patch to support the VirginPulse
