--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-08  Markus Germeier  <mager@tzi.de>
+	* added support for the new 128MB internal chip
+	  reported by Karin. Thanks!
+
 2004-01-13  Markus Germeier  <mager@tzi.de>
         * Added FY200 informations which is reported to work
 	  external memory is supposed to work with these changes  
