--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-21  Markus Germeier  <mager@tzi.de>
+	* fixed build environment
+	* kernel module is (finally) deprecated
+	* may be enabled "--with-kernel-module"
+	
 2004-02-08  Markus Germeier  <mager@tzi.de>
 	* added support for the new 128MB internal chip
 	  reported by Karin. Thanks!
