--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-24  Markus Germeier  <mager@tzi.de>
+	* small build environment updates
+	* updated mpio.spec.in file
+	
 2004-03-21  Markus Germeier  <mager@tzi.de>
 	* fixed build environment
 	* kernel module is (finally) deprecated
