--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Markus Germeier  <mager@tzi.de>
+	* Don't BuildRequire libusb-devel because
+	  it does not exist on SuSE 9.0
+	
 2004-03-24  Markus Germeier  <mager@tzi.de>
         * dummy entry! fixed CVS syncmail
 	* check latest Changelog entries!
