--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-05-30  Markus Germeier  <mager@tzi.de>
+	* changed version to 0.7.1-pre2
+
 2004-04-24  Markus Germeier  <mager@tzi.de>
 	* further open/close fixes
 	
