--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-01-21  Markus Germeier  <mager@tzi.de>
+	* changed version to 0.7.1-pre3
+	* (hopefully) fixed signedness hell,
+	  should fix problems with 64 bit machines
+
+2006-01-20  Markus Germeier  <mager@tzi.de>
+	* fixed mpio.spec.in
+	
 2005-04-20  Markus Germeier  <mager@tzi.de>
 	* configure.in: 
 	  fix version check for libusb, use black list instead	
