--- a/README
+++ b/README
@@ -1,79 +1,2 @@
-- How can I get started with this software?
-
-You should create device file for MPIO. Be root and type following:
-
-   /usr/local/sbin/mkmpiodev
-
-Once you create it, you do not need to run this script again.
-Next, the driver module has to be loaded before playing.
-
-   /sbin/depmod -a
-   /sbin/modprobe mpio
-
-Connect your MPIO to PC by USB cable. You can run mpiosh shell now.
-When you want to stop playing, disconnect MPIO and type:
-
-   /sbin/modprobe -r mpio
-
-*Hotplug for kernel 2.4.x
-
- If the Hot plugging tool (like Murasaki) is installed on your
-system, the driver module will be loaded/unloaded automatically
-when MPIO player is connected/disconnected to your PC. And you
-do not need to run modprobe anymore.
-
-- Is there any risk to use this software with my MPIO mp3 player?
-
-We do not really know that, but we do not garantee for anything. If
-you use this software and your MPIO mp3 player turns into a useless
-brick it is your own fault. If you use any other device with this
-library it would be a wonder if does _not_ turn it into a brick. So if
-you do not like your mp3 player just use this software ;-)
-
-- I downloaded a current CVS snapshot but there is no configure script, only
-  a configure.in ! What do I have to do??
-
-configure and a few other files are automagically created using the
-tools aclocal, autoconf and automake. Execute the script "autogen.sh"
-and you should be ready to go. (Of course, you need to have the
-mentioned tools installed ;-)
-
-- How to help us finding bugs and learning more about different models
-  of the MPIO mp3 players?
-
-The mpiosh shell is at the moment the only user interface to access
-the functionality of libmpio. Because this software is definitly not
-ready yet (pre alpha) and we need a lot of more information about
-different models of the MPIO mp3 players we add special debugging
-functionality to the shell to help users to support our work.
-
-To help us understanding your bug reports we need a lot of information
-about the data which is exchanged between your MPIO mp3 player and our
-library. To get this information we added a special 'debug' command to 
-the mpio-shell (mpiosh). To activate the debug ouput type the following 
-command:
-
-  mpio <i> debug on
-
-to see more detailed debug output the level can be changed using the
-'level' option like this:
-
-  mpio <i> debug level 5
-
-This sets the highest debug level available. To make it easier to send us
-the output you can redirect the debug output to a file like this:
-
-  mpio <i> debug file /tmp/mpio-5.debug
-
-If you would like to help us finding bugs and learning more about the
-protocol of the MPIO players use this debugging support and send the log
-files to one of the developers or the mailing-list at sourceforge
-
-Thanks for you help.
-
-your MPIO-Team
-
-
-
-
+This is a fork of http://mpio.sourceforge.net/
 
